kubernetes/underdefresco_api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: underdefresco-api
  labels:
    app: underdefresco-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: underdefresco-api
  template:
    metadata:
      labels:
        app: underdefresco-api
    spec:
      containers:
      - name: nodejs-api
        image: valeriobosco/underdefresco
        ports:
        - containerPort: 80
          protocol: TCP
