kubernetes/underdefresco_oauth.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: underdefresco-oauth
  labels:
    app: underdefresco-oauth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: underdefresco-oauth
  template:
    metadata:
      labels:
        app: underdefresco-oauth
    spec:
      containers:
      - name: nodejs-oauth
        image: valeriobosco/underdefresco
        ports:
        - containerPort: 80
          protocol: TCP
