kubernetes/underdefresco_api_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: underdefresco-api-service
  labels:
    run: underdefresco-api-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: underdefresco-api
