kubernetes/underdefresco_oauth_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: underdefresco-oauth-service
  labels:
    run: underdefresco-oauth-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: underdefresco-oauth
