kubernetes/underdefresco.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: underdefresco-oauth
  labels:
    app: underdefresco-oauth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: underdefresco-oauth
  template:
    metadata:
      labels:
        app: underdefresco-oauth
    spec:
      containers:
      - name: nodejs-oauth
        image: valeriobosco/underdefresco
        ports:
        - containerPort: 80
          protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: underdefresco-api
  labels:
    app: underdefresco-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: underdefresco-api
  template:
    metadata:
      labels:
        app: underdefresco-api
    spec:
      containers:
      - name: nodejs-api
        image: valeriobosco/underdefresco
        ports:
        - containerPort: 80
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: underdefresco-oauth-service
  labels:
    run: underdefresco-oauth-service
spec:
  type: LoadBalancer
  ports:
  - port: 3000
    targetPort: 80
    protocol: TCP
  selector:
    app: underdefresco-oauth

---
apiVersion: v1
kind: Service
metadata:
  name: underdefresco-api-service
  labels:
    run: underdefresco-api-service
spec:
  type: LoadBalancer
  ports:
  - port: 3001
    targetPort: 80
    protocol: TCP
  selector:
    app: underdefresco-api


---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: underdefresco-ingress
#  namespace: default
#spec:
#  rules:
#  - host: localhost
#    http:
#      paths:
#      - path: /api/
#        pathType: Prefix
#        backend:
#          service:
#            name: underdefresco-api-service
#            port:
#              number: 3001
#      - path: /
#        pathType: Prefix
#        backend:
#          service:
#            name: underdefresco-oauth-service
#            port:
#              number: 3000
#      
      

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: underdefresco-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "c8bf-151-24-228-47.eu.ngrok.io"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: underdefresco-oauth-vs
spec:
  hosts:
  - "c8bf-151-24-228-47.eu.ngrok.io"
  gateways:
  - underdefresco-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 3000
        host: underdefresco-oauth-service
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: underdefresco-api-vs
spec:
  hosts:
  - "c8bf-151-24-228-47.eu.ngrok.io"
  gateways:
  - underdefresco-gateway
  http:
  - match:
    - uri:
        prefix: /api/
    route:
    - destination:
        port:
          number: 3001
        host: underdefresco-api-service
