kubernetes/underdefresco_ingress_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: underdefresco-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "c8bf-151-24-228-47.eu.ngrok.io"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: underdefresco-oauth-vs
spec:
  hosts:
  - "c8bf-151-24-228-47.eu.ngrok.io"
  gateways:
  - underdefresco-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 3000
        host: underdefresco-oauth-service
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: underdefresco-api-vs
spec:
  hosts:
  - "c8bf-151-24-228-47.eu.ngrok.io"
  gateways:
  - underdefresco-gateway
  http:
  - match:
    - uri:
        prefix: /api/
    route:
    - destination:
        port:
          number: 3001
        host: underdefresco-api-service
